kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend

        image: 406460435005.dkr.ecr.ap-south-1.amazonaws.com/backend:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 5000
