kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: 406460435005.dkr.ecr.ap-south-1.amazonaws.com/frontend:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 80
