kubernetes/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: backend

  ports:
  - port: 5000
    targetPort: 5000

  type: NodePort
